fix some stylizing issues on mobile

--- a/gameselection.css
+++ b/gameselection.css
@@ -13,7 +13,7 @@ body {
 header {
     background: rgba(50, 0, 75, 1.5);
     height: 70px;
-    width: 100%;
+    width: 100vw;
 }
 
 header ul {
